[gd_scene load_steps=13 format=2]

[ext_resource path="res://BabaGodotLib/Fonts/BoldCapsPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BabaGodotLib/UI/Menu/OptionButtons/MenuOptionBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://BabaGodotLib/UI/Menu/MenuBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/SaveLoadMenus/SaveConfirmMenu/SaveConfirmMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/SaveLoadMenus/SaveConfirmMenu/SaveNameField.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[node name="SaveConfirm" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.941176, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect" index="0"]
modulate = Color( 0, 0, 0, 0.6 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -176.587
margin_right = 400.0
margin_bottom = 176.587
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="SaveInformations" type="HBoxContainer" parent="." index="2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 80.0
margin_top = -100.298
margin_right = -80.0
margin_bottom = -35.2984
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CurrentSave" type="VBoxContainer" parent="SaveInformations" index="0"]
margin_right = 405.0
margin_bottom = 75.0
size_flags_horizontal = 2

[node name="c_savenamestaken" type="Label" parent="SaveInformations/CurrentSave" index="0"]
visible = false
margin_right = 455.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "This name is already taken by another save !"
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="SaveInformations/CurrentSave" index="1"]
margin_right = 405.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="c_savename" type="Label" parent="SaveInformations/CurrentSave/HBoxContainer" index="0"]
margin_top = 5.0
margin_right = 151.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "Current name : "
valign = 1
uppercase = true

[node name="SaveNameField" type="LineEdit" parent="SaveInformations/CurrentSave/HBoxContainer" index="1"]
margin_left = 155.0
margin_right = 405.0
margin_bottom = 29.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 32
expand_to_text_length = true
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "SAVE NAME"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="c_savetime" type="Label" parent="SaveInformations/CurrentSave" index="2"]
margin_top = 33.0
margin_right = 405.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 4 )
text = "Current Time : "
valign = 1
uppercase = true

[node name="c_savelevel" type="Label" parent="SaveInformations/CurrentSave" index="3"]
margin_top = 56.0
margin_right = 405.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Current Level : "
valign = 1
uppercase = true

[node name="TargetSave" type="VBoxContainer" parent="SaveInformations" index="1"]
margin_left = 565.0
margin_top = 5.0
margin_right = 800.0
margin_bottom = 70.0
size_flags_vertical = 4
alignment = 2

[node name="t_savename" type="Label" parent="SaveInformations/TargetSave" index="0"]
margin_right = 225.0
margin_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Targetted Save name : "
valign = 1
uppercase = true

[node name="t_savetime" type="Label" parent="SaveInformations/TargetSave" index="1"]
margin_top = 23.0
margin_right = 225.0
margin_bottom = 42.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
text = "Targetted Save Time : "
valign = 1
uppercase = true

[node name="t_savelevel" type="Label" parent="SaveInformations/TargetSave" index="2"]
margin_top = 46.0
margin_right = 235.0
margin_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
text = "Targetted Save Level : "
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="." index="3"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" parent="VBoxContainer" index="0" instance=ExtResource( 2 )]
margin_right = 960.0
text = "Cancel"

[node name="ConfirmAndSave" parent="VBoxContainer" index="1" instance=ExtResource( 2 )]
margin_top = 48.0
margin_right = 960.0
margin_bottom = 92.0
text = "Confirm and Save"
